--- a/cookbooks/nginx/templates/etc/nginx/conf.d/jenkins.conf
+++ b/cookbooks/nginx/templates/etc/nginx/conf.d/jenkins.conf
@@ -4,7 +4,7 @@ upstream backend {
 
 server {
     listen       80;
-    server_name  localhost;
+    server_name  <%= node[:host_name] %>;
     root         /usr/share/nginx/html;
 
     gzip on;
